fix vertical alignment

--- a/src/calendarBookingForm/Components/Variant.scss
+++ b/src/calendarBookingForm/Components/Variant.scss
@@ -24,7 +24,6 @@
     width: 6rem;
     font-size: 15px;
     padding: .5rem;
-    height: 2rem;
     &:hover{
         cursor: pointer;
     }
