--- a/src/calendarBookingForm/Components/VariantList.scss
+++ b/src/calendarBookingForm/Components/VariantList.scss
@@ -46,11 +46,3 @@
       padding: 0 2rem;
   }
 }
-@include Tablet{
-    .VariantListTotal-ConfirmBtn {
-        height: 2rem;
-    }
-    .Variant-AddBtn {
-        height: 2rem;
-    }
-}
