--- a/src/calendarBookingForm/Components/TimeSlot.scss
+++ b/src/calendarBookingForm/Components/TimeSlot.scss
@@ -1,3 +1,7 @@
+.TimeSlot-Container {
+    margin-bottom: 1.5rem;
+}
+
 .TimeSlot-AvailableGrid {
     margin-top: 0.2rem;
     display: flex;
@@ -9,6 +13,7 @@
 .TimeSlot-Action, .TimeSlot-Details {
     display: flex;
     flex: 1 1 0px;
+    margin: 0;
 }
 
 .TimeSlot-Action {
